# sing-along

./: .dockerignore  .env-sample  .gitignore  Dockerfile  README.md  docker-compose-cicd.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  manage.py  package.json  pyproject.toml  pytest.ini
.cursor/rules/: docker-django-commands.mdc  frontend-typescript.mdc  poetry-lock.mdc
.github/workflows/: test.yml
api/: admin.py  broadcast.py  consumers.py  db_util.py  models.py  routing.py  urls.py
api/migrations/: 0001_initial.py  0002_auto_20221215_2358.py  0002_search_indexes.py  0003_fix_unique_constraint.py  0004_alter_song_url.py  0005_auto_20221223_2312.py  0006_songbook_songs.py  0007_auto_20221231_1715.py  0008_alter_song_content.py  0009_auto_20230122_2213.py  0010_add_rating_and_votes.py  0011_add_capo_and_is_flagged.py  0012_fix_gin_indexes.py  0013_songbook_unique songbook session key.py  0014_user_songbook_memberships.py  0015_membership_unique membership entry.py  0016_migrate_to_random_session_keys.py  0016_userprofile.py  0017_migrate_to_random_session_keys.py  0018_alter_songbook_session_key.py  0019_songentry_requested_by.py  0020_alter_songentry_requested_by.py  0021_song_likes.py  0022_change_setting_defaults.py  0023_wishlistsong.py  0024_userprofile_token.py  0025_songbook_theme.py  0026_alter_song_likes.py  0027_remove_song_likes.py  0028_auto_20231124_2024.py  0029_song_spotify_id.py  0030_auto_20231128_0246.py  0031_songbook_action_verb.py  0032_add_songbook_memo.py  0033_remove_soft_deleted_memberships.py  0034_disable_soft_delete_for_memberships.py  0035_auto_20241224_1703.py  0035_songbookuserposition.py  0036_add_position_fields.py  0037_populate_position_fields.py  (+2 more)
api/seed/: 0001_initial.json
api/serializers/: membership.py  recommendation.py  song.py  song_entry.py  songbook.py  user.py  user_profile.py  user_social_auth.py  wishlist_song.py
api/tests/: helpers.py  test_models.py
frontend/: package-lock.json  package.json  tsconfig.json
scripts/: docker-cicd-entrypoint.sh  docker-entrypoint.dev.sh  docker-entrypoint.prod.sh  docker-entrypoint.sh  test-backend.sh
sing_along/: asgi.py  middleware.py  settings.py  test_runner.py  urls.py  views.py  wsgi.py
sing_along_api/: asgi.py  consumers.py  routing.py  settings.py  urls.py  views.py  wsgi.py
sing_along_web/: asgi.py  settings.py  urls.py  wsgi.py
terraform_deploy/: main.tf  variables.tf
(+86 files in other folders)
