[tool.poetry]
name = "sing-along"
version = "0.1.0"
description = ""
authors = ["sam atkins <sam.d.atkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.16"
psycopg2-binary = "^2.9.2"
channels = "^3.0.4"
waitress = "^2.1.2"
debugpy = "^1.6.0"
whitenoise = "^6.2.0"
black = "^22.10.0"
django-safedelete = "^1.3.1"
djangorestframework = "^3.14.0"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
django-environ = "^0.9.0"
gunicorn = "^20.1.0"
authlib = "^1.2.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.2.1"
black = "^22.6.0"
coverage = "^6.5.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core=1.2.2"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "py"
url = "https://pypi.python.org/simple"

[tool.pyright]
reportGeneralTypeIssues = false