[tool.poetry]
name = "sing-along"
version = "0.1.0"
description = ""
authors = ["sam atkins <sam.d.atkins@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
Django = ">=5.2.8,<5.3"
psycopg = {extras = ["binary"], version = ">=3.1.8"}
debugpy = "^1.8.0"
whitenoise = "^6.6.0"
django-safedelete = "^1.4.0"
djangorestframework = "^3.15.0"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
django-environ = "^0.11.0"
gunicorn = "^23.0.0"
authlib = "^1.3.0"
dj-database-url = "^2.0.0"
backoff = "^2.2.1"
python-jose = "^3.3.0"
social-auth-app-django = "^5.4.0"
pytest = "^8.0.0"
pytest-django = "^4.8.0"
pytest-env = "^1.1.0"
spotipy = "^2.23.0"
curl_cffi = "^0.7"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.0"
black = "^24.0.0"
coverage = "^7.0.0"
httpretty = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.7.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "py"
url = "https://pypi.python.org/simple"

[tool.pyright]
reportGeneralTypeIssues = false
typeCheckingMode = "basic"
